<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".AddOffer">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/iv_bluetooth"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_bluetooth_searching_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/iv_offer_company_photo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_iv_offer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tv_offer_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_offer_company_name"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_offer_company_name"
        app:layout_constraintTop_toTopOf="@+id/iv_offer_company_photo" />

    <EditText
        android:id="@+id/et_offer_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/et_offer_company_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_offer_company_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_offer_company_name" />

    <Button
        android:id="@+id/b_add_photo"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/b_add_photo"
        app:layout_constraintBottom_toBottomOf="@+id/iv_offer_company_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_offer_company_photo" />

    <TextView
        android:id="@+id/tv_offer_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_offer_description"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_offer_company_photo" />

    <EditText
        android:id="@+id/et_offer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_offer"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_offer_description"
        app:layout_constraintStart_toStartOf="@+id/tv_offer_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_offer_description" />

    <TextView
        android:id="@+id/tv_offer_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/tv_offer_price"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_offer" />

    <EditText
        android:id="@+id/et_offer_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_offer_price"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_ivpara_3"
        app:layout_constraintStart_toStartOf="@+id/tv_offer_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_offer_price" />

    <ImageView
        android:id="@+id/iv_ivpara_3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_offer_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_offer_price"
        app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

    <TextView
        android:id="@+id/tv_offer_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_offer_code"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/iv_ivpara_3"
        app:layout_constraintStart_toStartOf="@+id/et_offer_price"
        app:layout_constraintTop_toBottomOf="@+id/et_offer_price" />

    <EditText
        android:id="@+id/et_offer_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_offer_code"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_offer_code"
        app:layout_constraintStart_toStartOf="@+id/tv_offer_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_offer_code" />

    <Button
        android:id="@+id/b_add_offer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_button"
        android:text="@string/b_add_offer"
        app:layout_constraintEnd_toEndOf="@+id/et_offer_code"
        app:layout_constraintStart_toStartOf="@+id/et_offer_code"
        app:layout_constraintTop_toBottomOf="@+id/et_offer_code" />

</androidx.constraintlayout.widget.ConstraintLayout>